--- a/Line Horizontal and Vertical with icon and text/Line Horizontal and Vertical with icon and text.html
+++ b/Line Horizontal and Vertical with icon and text/Line Horizontal and Vertical with icon and text.html
@@ -50,7 +50,7 @@
 		.timeline {
 			position: relative;
 			width: 30px;
-			/* margin: 0 auto; */
+			margin: 0 auto;
 			overflow: hidden;
 			border: 2px dashed blue;
 		}
