--- a/Login forms/Toggle show Login-form/login.html
+++ b/Login forms/Toggle show Login-form/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style.css">
     <title>Login with model</title>
 </head>
 
@@ -22,7 +22,7 @@
                 <button type="submit" id="Log_in">Log in</button></label><br>
         </form>
         <button id="openForm" onclick="TapOpen()">
-            Log improper</button>
+            Log in here</button>
     </div>
     <script>
         function TapOpen() {
