--- a/Poloroid with grid/Poloroid and CSS3 grid.html
+++ b/Poloroid with grid/Poloroid and CSS3 grid.html
@@ -10,11 +10,13 @@
     img {
         width: 70%;
         height: auto;
-
     }
-div:hover, .grid-item{
-    border: 1px dotted black;
-}
+
+    div:hover,
+    .grid-item {
+        border: 1px dotted black;
+    }
+
     .grid-conatiner {
         display: grid;
         grid-template-columns: auto auto;
@@ -70,7 +72,9 @@ div:hover, .grid-item{
 </style>
 
 <body>
-    <marquee behavior="" direction="right"><h3>From here the content is poloroid/card view image with grid view of CSS3.</h3></marquee>
+    <marquee behavior="" direction="right">
+        <h3>From here the content is poloroid/card view image with grid view of CSS3.</h3>
+    </marquee>
     <div class="grid-conatiner">
         <div class=" grid-item ">
             <img src="Photos/desert.jpg" alt="">
@@ -89,7 +93,9 @@ div:hover, .grid-item{
             <div>Enter description here</div>
         </div>
     </div>
-    <marquee behavior="" direction=""><h3>From here the content is only a single poloroid/card view image.</h3></marquee>
+    <marquee behavior="" direction="">
+        <h3>From here the content is only a single poloroid/card view image.</h3>
+    </marquee>
     <div class="item">
         <img src="Photos/camel.jpg" alt="">
         <div>
