--- a/Showing content on scroll/index.html
+++ b/Showing content on scroll/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Default layout resets and text styling -->
     <link rel="stylesheet" href="./stylesheet/style.css">
-    <!-- Custom styling -->
-    <link rel="stylesheet" href="./stylesheet/scroll.css">
     <!-- javascript to custom scroll on page -->
     <script src="./javascript/show-on-scroll.js"></script>
     <title>Showing content on scroll</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header show-on-scroll">
         <div class="main-photo"></div>
-        <h1 class="heading">Pizza place</h1>
+        <div class="menu-btn">|||</div>
+        <h1 class="heading">Pizza palace - Best place to peat</h1>
     </header>
     <article class="content">
         <p>
@@ -32,9 +31,9 @@
             Are you ready!!!! <br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facere persofficia. Itaque
             ducimus veritatis cumque.</p>
-        <div class=" grid-item ">
-            <img src="./images/One.webp" alt="">
-            <div>Enter description here</div>
+        <div class=" grid-item show-on-scroll">
+            <img src="./images/One.webp" alt="Italian pizza with black background" class="">
+            <div>Let's make some italian pizzas</div>
         </div>
 
 
@@ -49,9 +48,9 @@
             <li>1.5 teaspoons salt</li>
             <li>2 teaspoons sugar</li>
         </ul>
-        <div class=" grid-item ">
-            <img src="./images/four.webp" alt="">
-            <div>Enter description here</div>
+        <div class=" grid-item show-on-scroll">
+            <img src="./images/four.webp" alt="Img 2" class="">
+            <div>Ingredients</div>
         </div>
 
 
@@ -66,9 +65,9 @@
         <p> Knead everthing together for 10 to 15 minutes until the dough is smooth and elasticm keeping your surface
             floured.</p>
         <div class="img-container">
-            <div class=" grid-item ">
-                <img src="./images/three.webp" alt="">
-                <div>Enter description here</div>
+            <div class=" grid-item show-on-scroll">
+                <img src="./images/three.webp" alt="Img 3" class="">
+                <div>Prepare it delighfully</div>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dignissimos adipisci et.</p>
         </div>
@@ -79,10 +78,11 @@
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, eius omnis. Optio repellendus
             voluptatibus molestias? Provident tenetur vitae unde ipsum.</p>
-        <div class=" grid-item ">
-            <img src="./images/six.webp" alt="">
-            <div>Enter description here</div>
+        <div class=" grid-item show-on-scroll ">
+            <img src="./images/last.jpg" alt="">
+            <div>Pizzas are yumm</div>
         </div>
+        s
     </article>
     <footer>All rights reserved for 2020 @ pizza place.com</footer>
 </body>
