--- a/Icons and Buttons/Social icons project/index.html
+++ b/Icons and Buttons/Social icons project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>4 lined icons</title>
 </head>
 
@@ -19,6 +19,12 @@
         <a><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
         <a><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
         <a><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+    </div>
+    <div class="container rounded one">
+    </div>
+    <div class="container rounded one">
+    </div>
+    <div class="container rounded one">
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
