--- a/Icons and Buttons/Slider switch Button/index.html
+++ b/Icons and Buttons/Slider switch Button/index.html
@@ -7,6 +7,8 @@
     <title>Slider switch Button</title>
 </head>
 <body>
-    
-</body>
+    <div class="center">
+        <input type="checkbox">
+    </div>
+</body> 
 </html>
