--- a/Blog landing pages/Car expo 2020's best car/index.html
+++ b/Blog landing pages/Car expo 2020's best car/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <nav>
-            <img data-toggle="tooltip" data-placement="right" title="The best car." src="./photos/menu.png"
+            <img data-toggle="tooltip" data-placement="right" title="Can be site's menu icon" src="./photos/menu.png"
                 alt="menu icon">
             <ul>
                 <li><img src="./photos/car_icon.png" alt=""></li>
@@ -27,7 +27,8 @@
         </nav>
         <div class="content">
             <h1>Best car form 2020 <br> car expo</h1>
-            <p>Lorem ipsum doloF accusantium maxime libero! Ullam cum natus incidunt molestias molestias molestias
+            <p>Lorem ipsum doloF accusantium maxime libero! Ullam cum
+                natus incidunt molestias molestias molestias
                 molestias laudantium in amet
                 quisquam, quos cumque
                 iure.</p>
