--- a/Best Responsive Navbars/Navbar 1 (Everything with searchbar)/Best Responsive navbar.html
+++ b/Best Responsive Navbars/Navbar 1 (Everything with searchbar)/Best Responsive navbar.html
@@ -29,6 +29,10 @@
             </li>
         </ul>
     </nav>
+    <div>
+    <marquee behavior="scroll" direction="right" scrollamount="8" >Resize window to see responsivenes.</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="8" >Body content </marquee>
+    </div>
 </body>
 
 </html>
