--- a/Best Responsive Navbars/Navbar3/index.html
+++ b/Best Responsive Navbars/Navbar3/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>navbar3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    
+    <title>3 Step navbar vanilla codes</title>
 </head>
 <body>
     <header class="header">
-        <h1 class="logo"><a href="#">Flexbox</a></h1>
+        <h1 class="logo"><a href="#">With-Flexbox</a></h1>
       <ul class="main-nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -16,6 +18,11 @@
           <li><a href="#">Contact</a></li>
       </ul>
     </header> 
+    <div class="content">
+        <p>Resize to see 3 step navbar on different size.</p>
+        <p></p>
+        <marquee behavior="scroll" direction="right" scrollamount="4">Body content</marquee>
+    </div>
     
 </body>
 </html>
