--- a/Blog landing pages/Bottom Curve with parallex and scroll down arrow/index.html
+++ b/Blog landing pages/Bottom Curve with parallex and scroll down arrow/index.html
@@ -76,11 +76,14 @@
     <section class="newsection">
         <div>
             <h2 class="center" id="bodyHead">Body here</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, adipisci? Quam ducimus nihil
-                blanditiis voluptatibus deleniti expedita molestias doloribus culpa laborum aliquam ipsum aspernatur
-                temporibus harum hic ipsam ullam saepe recusandae, officia quia esse, modi obcaecati. Asperiores
-                necessitatibus itaque sunt optio consequuntur quod, ipsam maxime expedita doloremque dolorem animi
-                reprehenderit officiis, inventore quidem iusto natus repellendus. Doloribus quaerat molestiae quos!</p>
+            <p class="center"> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus,
+                adipisci?<br>
+                Quam ducimus nihil blanditiis voluptatibus deleniti expedita molestias doloribus <br>
+                culpa laborum aliquam
+                ipsum aspernatur harum hicaepe recusandae.<br>
+                officia quia esse, modi obcaecati. <br> Asperiores necessitatibus itaque sunt optio consequuntur quod
+                ipsam maxime expedita doloremque dolorem animi reprehenderit officiis<br>
+                inventore quidem iusto natus repellendus. Doloribus quaerat molestiae quos!</p>
         </div>
     </section>
     <section>
