--- a/Background img with Before-selector.html
+++ b/Background img with Before-selector.html
@@ -61,14 +61,16 @@
         content: '';
         position: absolute;
         /* Set background-image */
-        /*      Way one     */            /*
+        /*      Way one     */
+        /*
         background-image: url("photos/forest.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; */
         /* Way two */
         background: url('https://source.unsplash.com/user/erondu/1600x900') no-repeat center center/cover;
-        /*      Way three */            /*
+        /*      Way three */
+        /*
         background: url('photos/forest.jpg') center no-repeat ;
         background-size: cover; */
 
