--- a/Blog landing pages/Bakery store/index.html
+++ b/Blog landing pages/Bakery store/index.html
@@ -96,6 +96,42 @@
                     </p>
                 </div>
             </div>
+            <div class="cakes">
+                <div><img src="pics/one.jpg" alt="Add ing on cake">
+                    <b>Name: </b>Cake. <br>
+                    <b>Price: </b> 600rs <br>
+                    <b>rating: </b>4.3 <br>
+                    </p>
+                </div>
+            </div>
+            <div class="cakes">
+                <div><img src="pics/Two.jpeg" alt="Add ing on cake">
+                    <b>Name: </b>Cake. <br>
+                    <b>Price: </b> 600rs <br>
+                    <b>rating: </b>4.3 <br>
+                    </p>
+                </div>
+            </div>
+            <div class="cakes">
+                <div><img src="pics/one.jpg" alt="Add ing on cake">
+                    <b>Name: </b>Cake. <br>
+                    <b>Price: </b> 600rs <br>
+                    <b>rating: </b>4.3 <br>
+                    </p>
+                </div>
+            </div>
+            <div class="cakes">
+                <div><img src="pics/Two.jpeg" alt="Add ing on cake">
+                    <b>Name: </b>Cake. <br>
+                    <b>Price: </b> 600rs <br>
+                    <b>rating: </b>4.3 <br>
+                    </p>
+                </div>
+            </div>
+            <div class="cakes">
+                <div>This is basic design of a good Bakery site.
+                </div>
+            </div>
         </section>
         <aside id="aside1">
             <div class="box1 boxCheck">
