--- a/Blog landing pages/Showing content on scroll/index.html
+++ b/Blog landing pages/Showing content on scroll/index.html
@@ -20,13 +20,14 @@
     <article class="content">
         <p>
             <strong>
-                Pizza is best ipsum dolor sit amet consectetur adipisicing elit.Maxime nam deleniti nesciunt voluptatem
-                accusantium velit debitis commodi natus dignissimos quibusdam asperiores, blanditiis neque delectusiste.
-                Explicabo cupiditate et tempore laboriosam!</strong></p>
+                Pizza is a dish of Italian origin, consisting of a flat round base of dough baked with a topping of
+                tomatoes and cheese, typically with added meat, fish, or vegetables.</strong>
+        </p>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum velit veritatis ipsam qui minus sint aperiam
-            distinctio ad repudiandae assumenda quae perferendis consequatur harum, eaque quos. Harum dolorem incidunt
-            id.</p>
+            Pizza can help you absorb the antioxidant Lycopene. Lycopene is found in tomatoes, which are used to make
+            the base sauce for pizzas. Lycopene helps to lower blood pressure and bring down high cholesterol. It's also
+            more easily absorbed from cooked tomatoes as opposed to fresh tomatoes.</p>
+        <hr />
         <p> Here we will prepare some italian pizzas for you...
             Are you ready!!!! <br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facere persofficia. Itaque
@@ -38,7 +39,10 @@
 
 
         <h2>Italian pizza recipe</h2>
-        <p>(Make a dough for 4 pizzas, of 12inch in diameter)</p>
+        <hr
+            style="color: black; font-weight: bolder; margin-bottom: 20px; border:1px solid black; background-color: black;">
+
+        <p>Prerequisite: <i>(make a dough for 4 pizzas, of 12inch in diameter)</i></p>
         <h3>Ingredients</h3>
         <ul>
             <li>600ml of warm water</li>
@@ -54,30 +58,38 @@
         </div>
 
 
-        <h3>Method</h3>
-        <p> Sprinkle the yeast into a medium bowl with the warm water.
+        <h3>Method <i>(step wise)</i></h3>
+        <hr
+            style="color: black; font-weight: bolder; margin-bottom: 20px; border:1px solid black; background-color: black;">
+        <p> > Sprinkle the yeast into a medium bowl with the warm water.
             we don't mean hot, and we don't mean cold... we mean warm! That's the kind the yeast likes best. Stir until
             the yeast dissolves. </p>
-        <p> Place almost all of the flour on the table in the shape of anal
+        <p> > Place almost all of the flour on the table in the shape of anal
             volcano.(Think Mt. Vesuvius... appropriate
             since Naples is the king of all pizza cities!).</p>
-        <p> Pour the yeast-and-warm-water mix, along with the other ingredients, into the "crate" of the colcano. </p>
-        <p> Knead everthing together for 10 to 15 minutes until the dough is smooth and elasticm keeping your surface
+        <p> > Pour the yeast-and-warm-water mix, along with the other ingredients, into the "crate" of the colcano. </p>
+        <p> > Knead everthing together for 10 to 15 minutes until the dough is smooth and elasticm keeping your surface
             floured.</p>
         <div class="img-container">
             <div class=" grid-item show-on-scroll">
                 <img src="./images/three.webp" alt="Img 3" class="">
                 <div>Prepare it delighfully</div>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dignissimos adipisci et.</p>
+            <p>A well prepared pizza looks best and when the pizza looks best it gives the feeling of preminum and a
+                feel of satisfaction to the eater.</p>
         </div>
 
 
-        <h3>Serving</h3>
+        <h2>Serving</h2><hr
+        style="color: black; font-weight: bolder; margin-bottom: 20px; border:1px solid black; background-color: black;">
+
         <p>Serving is most important part of the foor prepration.</p>
         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, eius omnis. Optio repellendus
-            voluptatibus molestias? Provident tenetur vitae unde ipsum.</p>
+            <strong> Bring your dough to room temperature.</strong> <br>
+            Gluten, the protein that makes pizza dough chewy, is tighter in cold conditions like the fridge, which is
+            why cold pizza dough will stretch out and snap back just like a rubber band. This step will loosen up the
+            dough and make it easier to shape.
+        </p>
         <div class=" grid-item show-on-scroll ">
             <img src="./images/last.jpg" alt="">
             <div>Pizzas are yumm</div>
