--- a/Overlay/overlayExamples.html
+++ b/Overlay/overlayExamples.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>overlay</title>
+    <title>overlay examples</title>
 </head>
 <style>
-    body{
+    body {
         background-color: rgb(209, 246, 246);
     }
+
     .main {
         display: grid;
         grid-template-columns: auto auto auto;
@@ -23,7 +24,6 @@
         height: auto;
         margin: 20px auto;
         box-shadow: 4px 5px 9px 1px #8ed9e0;
-
     }
 
     img {
@@ -34,7 +34,16 @@
         display: block;
     }
 
-     #example-1 {
+    .text {
+        color: white;
+        font-size: 20px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    #example-1 {
         position: absolute;
         left: 0px;
         left: 0px;
@@ -46,16 +55,6 @@
         font-size: xx-large;
         opacity: 0;
         transition: .5s ease-in-out;
-    }
-
-    .text {
-        color: white;
-        font-size: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        /*Brings the center of contet at the specified location*/
     }
 
     .container:hover #example-1 {
@@ -126,8 +125,9 @@
 
     .container:hover #example-5 {
         width: 100%;
-        left:0;
+        left: 0;
     }
+
     #example-6 {
         position: absolute;
         font-size: xx-large;
@@ -135,7 +135,7 @@
         left: 0;
         right: 0;
         /* background-color: #008CBA; */
-        background-color:none; 
+        background-color: none;
         overflow: hidden;
         width: 100%;
         height: 100%;
@@ -144,9 +144,10 @@
     }
 
     .container:hover #example-6 {
-       opacity: 1;
+        opacity: 1;
     }
-    .container:hover img{
+
+    .container:hover img {
         opacity: .6;
     }
 </style>
@@ -162,31 +163,33 @@
         <div class="container">
             <img src="Photos/camel.jpg" alt="person">
             <div class="overlay" id="example-2">
-                <div class="text">Details</div>
+                <div class="text">Top to Bottom</div>
             </div>
         </div>
         <div class="container">
             <img src="Photos/desert.jpg" alt="person">
             <div class="overlay" id="example-3">
-                <div class="text">Details</div>
+                <div class="text">Bottom to Top</div>
             </div>
         </div>
         <div class="container">
             <img src="Photos/avatar.png" alt="person">
             <div class="overlay" id="example-4">
-                <div class="text">Details</div>
+                <div class="text">Left to Right</div>
             </div>
         </div>
         <div class="container">
             <img src="Photos/camel.jpg" alt="person">
             <div class="overlay" id="example-5">
-                <div class="text">Details</div>
+                <div class="text">Right to Left</div>
             </div>
         </div>
         <div class="container">
             <img src="Photos/desert.jpg" alt="person">
             <div class="overlay" id="example-6">
-                <div class="text" style="color: black; padding: 7px; background-color: rgb(204, 158, 98);">Details</div>
+                <div class="text" style="color: black; padding: 7px; background-color: rgb(204, 158, 98);">
+                    Details
+                </div>
             </div>
         </div>
     </div>
