--- a/jsonToHTMLToPDF.html
+++ b/jsonToHTMLToPDF.html
@@ -28,11 +28,20 @@
     <div id="FullAreaForPDF">
         <div>
             <hr>
-            <button>Button 1</button> <button>Button 2</button>
+            <center>
+                <button>Button 1</button> -- <button>Button 2</button>
+            </center>
             <br>
             This is <u>"Json To HTML To PDF"</u> which can be show on the pdf we are downloading
             <hr>
             <div id="dvTable"></div>
+            <hr>
+            <center><img src="ee.webp" style="width:80%; max-width: 250px;"></center>
+            <hr>
+            <center><img src="ee.webp" style="width:80%; max-width: 250px;"></center>
+            <hr>
+            <center><img src="ee.webp" style="width:80%; max-width: 250px;"></center>
+            <hr>
             <center><img src="ee.webp" style="width:80%; max-width: 250px;"></center>
         </div>
     </div>
