--- a/Background img with Before-selector.html
+++ b/Background img with Before-selector.html
@@ -9,16 +9,17 @@
     <title>Best Responsive navbar</title>
 </head>
 <style>
+    * {
+        margin: 0px;
+        padding: 0px;
+    }
+
     body {
         font-family: 'Roboto', sans-serif;
         /* shwos linear color tl the whole body
         background-image: linear-gradient(to right, red, orange, yellow, green, blue);
         height: 100%; */
-    }
-
-    * {
-        margin: 0px;
-        padding: 0px;
+        /* position: relative; */
     }
 
     .navbar-ul {
@@ -77,7 +78,7 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        opacity: .8;
+        opacity: .42;
         top: 0px;
         left: 0px;
     }
