--- a/Gallary/Responsive image Gallary using css.html
+++ b/Gallary/Responsive image Gallary using css.html
@@ -31,6 +31,12 @@
             width: 24.99999%;
         }
 
+        @media only screen and (max-width: 1000px) {
+            .responsive {
+                width: 33.0%;
+                margin: 6px 0;
+            }
+        }
         @media only screen and (max-width: 700px) {
             .responsive {
                 width: 49.99999%;
