Changes on button and sliders

--- a/Buttons and Icons/Social icons views/index.html
+++ b/Buttons and Icons/Social icons views/index.html
@@ -20,14 +20,14 @@
         <a><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
         <a><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
     </div>
-    <div class="container rounded one">
+<!--     <div class="container rounded one">
         b
     </div>
     <div class="container rounded one">
-c    </div>
+        c </div>
     <div class="container rounded one">
- d   </div>
- <br><br><br>
+        d </div>
+    <br><br><br> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
