--- a/SCroll snap/scrollSnap.html
+++ b/SCroll snap/scrollSnap.html
@@ -6,109 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-<style>
-	* {
-		box-sizing: border-box;
-	}
-
-	.container {
-		position: relative;
-		width: 300px;
-		display: flex;
-		overflow: auto;
-		scroll-snap-type: x mandatory;
-	}
-
-	.container::-webkit-scrollbar {
-		width: 7px;
-		height: 7px;
-	}
-
-	.container::-webkit-scrollbar-thumb {
-		content: "0";
-		background: #434343;
-		border-radius: 16px;
-		box-shadow: inset 2px 2px 2px rgb(255 255 255 / 25%), inset -2px -2px 2px rgb(0 0 0 / 25%);
-	}
-
-	.container::-webkit-scrollbar-button {
-		width: 0px;
-		height: 0px;
-		background: #c7c7c7;
-	}
-
-	.container::-webkit-scrollbar-track {
-		/* background: linear-gradient(90deg, #434343, #434343 1px, #111 0, #111); */
-		background: #d6d2d2;
-	}
-
-	.item {
-		min-width: 100%;
-		height: 100px;
-		border: 3px solid gold;
-		border-radius: 0px 50px;
-		padding: 8px;
-		gap: 10px;
-		scroll-snap-align: start;
-	}
-
-	.item:nth-child(1) {
-		background-color: orange;
-	}
-
-	.item:nth-child(2) {
-		background-color: greenyellow;
-	}
-
-	.item:nth-child(3) {
-		background-color: yellow;
-	}
-
-	.item:nth-child(4) {
-		background-color: blue;
-	}
-
-	.item:nth-child(5) {
-		background-color: red;
-	}
-
-	.item:nth-child(6) {
-		background-color: rgb(0, 179, 255);
-	}
-
-	/* .container::after {
-		content: ">";
-		background-color: #dad2d269;
-		z-index: 2;
-		position: absolute;
-		width: 23px;
-		border-radius: 4px;
-		text-align: center;
-		top: 50%;
-		font-weight: 600;
-		right: 0;
-		cursor: pointer;
-		font-size: x-large;
-		transform: translateY(-50%);
-	}
-
-	.container::before {
-		content: "<";
-		background-color: #dad2d269;
-		z-index: 2;
-		position: absolute;
-		width: 23px;
-		border-radius: 4px;
-		text-align: center;
-		top: 50%;
-		font-weight: 600;
-		left: 0;
-		cursor: pointer;
-		font-size: x-large;
-		transform: translateY(-50%);
-	} */
-</style>
 
 <body>
 	<div class="container">
