Added auto screen view actions

--- a/OnScreenAutoActions/Animate model display in-out/index.html
+++ b/OnScreenAutoActions/Animate model display in-out/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-	<h1>Animating a &ltdialog&gt element</h1>
+	<h1>New Way with new tag</h1>
+	<h2>Animating a "&ltdialog&gt" element</h2>
 	<button class="button open-button">open modal</button>
 
 	<dialog class="modal" id="modal">
