Better scratch card

--- a/Frontend Components/Scratch - card/index.html
+++ b/Frontend Components/Scratch - card/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Scratch card</title>
-	<link rel="stylesheet" href="./style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Scratch Card</title>
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+	<!-- Stylesheet -->
+	<link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-	<div class="heading">Scratch Card Javascript</div>
-
-	<div class="scratch-card-container">
-		<div class="message">
-			🎉 Congratulations! You won a prize! 🎉
+	<div class="container">
+		<div class="base">
+			<h4>You Won</h4>
+			<h3>$10</h3>
 		</div>
-		<canvas id="scratchCanvas"></canvas>
+		<canvas id="scratch" width="200" height="200"></canvas>
 	</div>
-
+	<!-- Script -->
 	<script src="./script.js"></script>
 </body>
 
